# 3d

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
assets/javascripts/: bundle.88dd0f4e.min.js  bundle.d7c377c4.min.js
css/: custom.css
docs/: index.md
docs/css/: custom.css
docs/external-resources/: index.md
docs/first-print/: index.md  load-filament.md  prepare-model.md  print.md  printer-assembly.md  printer-calibration.md  slicer-installation.md  slicer-tuning.md
docs/getting-started/: background-and-safety.md  first-print.md  index.md  load-filament.md  prepare-model.md  print.md  printer-assembly.md  printer-calibration.md  printer-setup.md  printing.md  publish-make.md  slicer-configuration.md  slicer-installation.md  slicer-setup.md  slicer-tuning.md  software.md
docs/reference/: finding-models.md  index.md  nozzle.md  tools.md  troubleshooting.md  useful-models.md
docs/upgrades/: index.md  printable.md
external-resources/: index.html
first-print/: index.html
first-print/background-and-safety/: index.html
first-print/load-filament/: index.html
first-print/prepare-model/: index.html
first-print/print/: index.html
first-print/printer-assembly/: index.html
first-print/printer-calibration/: index.html
first-print/publish-make/: index.html
first-print/slicer-configuration/: index.html
getting-started/: index.html
reference/: index.html
search/: search_index.json
tests/: test_module.py
upgrades/: index.html
(+23 files in other folders)
